deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: huoneisto
spec:
  template:
    metadata:
      labels:
        run: huoniesto
    spec:
      containers:
      - name: huoniesto
        image:  gcr.io/jntlserv0/huoneisto:0.6
        ports:
        - containerPort: 8080
